src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Hand_Held_Manufacture__c</fullName>
        <label>Handheld Computer Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handheld_Component_In_Opportunity__c</fullName>
        <label>Is Handheld Component In Opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Pullthrough__c</fullName>
        <description>Sum of Total price of SKU non service products</description>
        <inlineHelpText>Value of Hardware bookings from Opportunity</inlineHelpText>
        <label>Hardware Pullthrough</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Service_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Service_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_all_SKU_Level_Entries__c</fullName>
        <description>Has all SKU Level Entries</description>
        <label>Has all SKU Level Entries</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.SKU_Level_Entry__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ISV_New__c</fullName>
        <label>ISV New</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISV_Partner2__c</fullName>
        <label>Application Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ISV on Opportunities</relationshipLabel>
        <relationshipName>ISV_on_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISV_Partner__c</fullName>
        <description>List ISV Partner involved in this opportunity</description>
        <label>ISV Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Vertical Segment</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Emergency and Ambulatory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Out Patient Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Physician Offices and Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Reference and Diagnostic Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks, Museums and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Value_Lead_Amount__c</fullName>
        <description>Lead Value (Lead Amount) - This field is created for capturing the Amount field on Lead</description>
        <label>Lead Value (Lead Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_Number__c</fullName>
        <label>Legacy Opportunity Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_system_ID__c</fullName>
        <label>Legacy System ID #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_items__c</fullName>
        <label>Has Line items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Provide more details as to why a deal is lost</description>
        <inlineHelpText>Provide more details as to why a deal is lost</inlineHelpText>
        <label>Lost Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Account_Type__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Marketing Account Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_from__c</fullName>
        <label>Migrated from</label>
        <picklist>
            <picklistValues>
                <fullName>Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSI E SFDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Moto_CMP__c</fullName>
        <description>Unique number provided by Motorola for CMP leads</description>
        <inlineHelpText>required when CMP box is checked</inlineHelpText>
        <label>Moto CMP #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_ISV_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No ISV Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_Users__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Number of Units / Users</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Error_Text__c</fullName>
        <label>Opp Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Attribute1__c</fullName>
        <label>Opportunity Attribute1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Attribute2__c</fullName>
        <label>Opportunity Attribute2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Conversion_Source__c</fullName>
        <description>This field is populated with the source of migrated Opportunity during conversion process.</description>
        <label>Opportunity Conversion Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Distributor__c</fullName>
        <label>Primary Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_User__c</fullName>
        <label>Opportunity End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Opportunity End User)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Corresponding opportunity number from Siebel</description>
        <displayFormat>Z-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Overdue__c</fullName>
        <formula>TODAY() &gt; CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reseller__c</fullName>
        <label>Primary Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Reseller)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>identify where the opportunity originated</description>
        <label>Opportunity Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner/Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar-Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar-External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Date_Fiscal_Month__c</fullName>
        <formula>CASE(MONTH(  Order_Date__c ), 
1, &quot;Jan&quot; , 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10,&quot;Oct&quot;, 
11,&quot;Nov&quot;, 
12,&quot;Dec&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date Fiscal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date_Fiscal_Quater__c</fullName>
        <formula>CASE(MONTH( Order_Date__c ), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date Fiscal Quater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date_Fiscal_Year__c</fullName>
        <formula>Text(YEAR( Order_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Stores the Order Date of the Opportunity</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Application__c</fullName>
        <description>If the application is not listed in the selection box, use this section to describe.</description>
        <label>Other Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Competition__c</fullName>
        <description>List the other competitor</description>
        <inlineHelpText>List the other competitor</inlineHelpText>
        <label>Other Competition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Other reason for closed opportunity, i.e. product mix shift, not using DT/TT Technology, etc...</description>
        <inlineHelpText>when lost/won reason is &quot;other&quot;, provide further details in this section</inlineHelpText>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>text(Owner.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>This field is created for capturing the role to the Opportunity Weekly stats object</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Sub_Region__c</fullName>
        <formula>text(Owner.Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Theater__c</fullName>
        <description>This fields is created to capture the Opportunity Owner theatre</description>
        <formula>text(Owner.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Exists__c</fullName>
        <formula>NOT(ISNULL(SyncedQuoteId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Number__c</fullName>
        <label>PC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reason__c</fullName>
        <description>select a specific reason why the PC is being requested</description>
        <label>PC Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Meet Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>click this box if you have requested a PC</description>
        <label>PC Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCs__c</fullName>
        <label>PCs</label>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PE_Deal_ID__c</fullName>
        <label>PE Deal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Name__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Partner Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Opportunity_Reseller__c)), 
NOT(ISBLANK(Primary_Channel_Partner_AIT__c))) , Opportunity_Reseller__r.Name+&apos; , &apos;+ Primary_Channel_Partner_AIT__r.Name,IF(AND(NOT(ISBLANK(Opportunity_Reseller__c)), 
(ISBLANK(Primary_Channel_Partner_AIT__c))) , Opportunity_Reseller__r.Name,IF(AND((ISBLANK(Opportunity_Reseller__c)), 
NOT(ISBLANK(Primary_Channel_Partner_AIT__c))) , Primary_Channel_Partner_AIT__r.Name,&apos;&apos;) ))</formula>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Deal_Size__c</fullName>
        <description>enter potential size of the deal - for identify stage</description>
        <label>Potential Deal Size ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferred_Handheld_Operating_System__c</fullName>
        <label>Preferred handheld Operating System?</label>
        <picklist>
            <controllingField>Handheld_Component_In_Opportunity__c</controllingField>
            <picklistValues>
                <fullName>(Legacy MSFT (Windows Mobile or CE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window 8/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Concession_Number_Siebel__c</fullName>
        <label>Price Concession Number (Siebel)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <formula>Account.Price_List__c</formula>
        <label>Price List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Carrier__c</fullName>
        <label>Primary Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Primary Carrier)</relationshipLabel>
        <relationshipName>PrimaryCarrier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Partner_AIT__c</fullName>
        <label>Primary Channel Partner AIT</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Primary Channel Partner PTZ)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Partner_Formula__c</fullName>
        <formula>Opportunity_Reseller__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Channel Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Distributor_AIT__c</fullName>
        <label>Primary Distributor AIT</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Primary Distributor PTZ)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Opportunity__c</fullName>
        <description>Used for AIT Pricing to select the Primary Opportunity</description>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Primary Opportunity)</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Reseller__c</fullName>
        <formula>Opportunity_Reseller__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Reseller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Cons_of_other_solution__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Pro/Cons of other solution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field is used to display Product Family when the Lead is converted</description>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readers - RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services and Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Source__c</fullName>
        <label>Product Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_In_Date__c</fullName>
        <label>Pull In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchasing_Authority__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Purchasing Authority</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Role__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Purchasing Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Service_Not_Offered__c</fullName>
        <description>Reason should be given if sevice is not offered.</description>
        <label>Reason For Service Not Offered</label>
        <picklist>
            <controllingField>Service_Offered__c</controllingField>
            <picklistValues>
                <fullName>Service Provided by 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Serviceable Product (e.g. Accessory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Service Capability in Designated Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel not Proposing Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Deemed Sufficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials/Fixed Price Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Maintainer (i.e. Parts Only)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Lost_Won__c</fullName>
        <description>enter the reason an opportunity is won or lost</description>
        <label>Reason Lost/Won</label>
        <picklist>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>